[package]
name = "rlocation"
version = "0.1.0"
edition = "2024"

[dependencies]
libui = "0.4.0"
log = "0.4.27"
objc2 = "0.6.1"
objc2-core-location = "0.3.1"
objc2-foundation = "0.3.1"
once_cell = "1.21.3"
oslog = "0.2.0"
public-ip-address = {git="https://github.com/ghztomash/public-ip-address", features = ["blocking"]}
serde = { version = "1.0.219", features = ["derive"] }
